--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -19,7 +19,7 @@
                     <% if (currentUser) { %>
                         <li>
                             <a href="/edit">
-                                Hello, <% currentUser.name() %>
+                                Hello, <%= currentUser.name() %>
                             </a>
                         </li>
                         <li><a href="/logout">Log out</a></li>
