basic MVP functionality implemented for searching GP and joining a queue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,18 +2,14 @@
 
 <h1>MediHopper</h1>
 
-<% users.forEach(function(user) { %>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <a href="/users/<%= user.username %>">
-                <%= user.name() %>
-            </a>
-        </div>
-        <% if (user.bio) { %>
-            <div class="panel-body"><%= user.bio %></div>
-        <% } %>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <form action="/search" method="post">
+            <input name="postcode" type="text" class="form-control"
+            placeholder="e.g. 3000">
+            <input type="submit" value="Find" class="btn btn-primary">
+        </form>
     </div>
-
-<% }) %>
+</div>
 
 <% include _footer %>
