--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <% include _header %>
 
-<h1>MediHopper</h1>
+<h1>You’re a hop away from
+    your next GP visit</h1>
+
+<h2>mediHopper provides a flexible queue system. 
+    You are now in control of your appointment time.</h2>
 
 <div class="panel panel-default">
     <div class="panel-body">
