--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>MediHopper</title>
+        <title>mediHopper</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
 
     <body>
@@ -12,7 +13,9 @@
             <div class="container">
 
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">MediHopper</a>
+                    <a class="navbar-brand" href="/">
+                        <img src="/logo-dark.png" width="150px" />
+                    </a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
