--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,33 +8,36 @@
     </head>
 
     <body>
-        <div class="navbar navbar-default navbar-static-top" role="navigation">
-
-            <div class="container">
-
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/">
-                        <img src="/logo-dark.png" width="150px" />
-                    </a>
-                </div>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <% if (currentUser) { %>
-                        <li>
-                            <a href="/edit">
-                                Hello, <%= currentUser.name() %>
-                            </a>
-                        </li>
-                        <li><a href="/logout">Log out</a></li>
-                    <% } else { %>
-                        <li><a href="/login">Log in</a></li>
-                        <li><a href="/signup">Sign up</a></li>
-                        <% } %>
-                </ul>
-            </div>
-        </div>
+        
 
         <div class="container">
+
+
+            <div class="panel panel-default navbox">
+                <div class="panel-body">
+                    
+                                <a class="navbar-brand" href="/">
+                                    <img src="/logo.png" width="150px" />
+                                </a>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <% if (currentUser) { %>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/edit">
+                                                Hello, <%= currentUser.name() %>
+                                            </a>
+                                        </li>
+                                        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
+                                    <% } else { %>
+                                        <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
+                                        <% } %>
+                                </ul>
+                            
+                </div>
+            </div>
+
+
+
             <% errors.forEach(function(error) { %>
                 <div class="alert alert-danger" role="alert">
                     <%= error %>
