added access to google map REST api, and geocoding address into latitude and longitude

--- a/views/booking-confirmation.ejs
+++ b/views/booking-confirmation.ejs
@@ -5,11 +5,24 @@
 
 <div class="panel panel-default">
     You have now successfully booked with:
-    <br> <%= currentUser.name() %>
-    <br> <%= name %>
-    <br> <%= address %>
-    <br> <%= postcode %>
-    <br> <%= phone %>
+    <table class="table">
+        <tr>
+            <td>
+                <br> <%= currentUser.name() %>
+                <br> <%= name %>
+                <br> <%= address %>
+                <br> <%= postcode %>
+                <br> <%= phone %>
+                <br> lat: <%= latitude %>
+                <br> long: <%= longitude %>
+            </td>
+            <td>
+                
+            </td>
+        </tr>
+
+    </table>
+    
 </div>
 
 <% include _footer %>
