--- a/views/style.css
+++ b/views/style.css
@@ -79,3 +79,10 @@ a:active {
   border-color: #ffffff;
 }
 
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
