--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,11 +2,12 @@
 
 <h1>Sign up</h1>
 
-<form action="/signup" method="post">
+<form action="/signup" method="post" enctype="multipart/form-data">
     <input name="username" type="text" class="form-control"
         placeholder="Username" required autofocus>
     <input name="password" type="password" class="form-control"
         placeholder="Password" required>
+    <input type="file" name="profile-image" value="" required>
     <input type="submit" value="Sign up" class="btn btn-primary btn-block">
 </form>
 
