restructured code for MVC pattern

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     <p>Please start by entering your postcode below to see the 
         clinics near you.</p>
 
-        <form action="/search" method="post">
+        <form action="/clinic/search" method="post">
             <table class="table">
                 <tr>
                     <td>Postcode:</td>
