--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>mediHopper</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        
         <link rel="stylesheet" href="/style.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -12,29 +14,27 @@
 
         <div class="container">
 
-
-            <div class="panel panel-default navbox">
-                <div class="panel-body">
+            <nav class="navbar rounded">
+            
                     
                                 <a class="navbar-brand" href="/">
                                     <img src="/logo.png" width="150px" />
                                 </a>
-                                <ul class="nav navbar-nav navbar-right">
+                                <nav class="nav">
                                     <% if (currentUser) { %>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="/edit">
-                                                Hello, <%= currentUser.name() %>
-                                            </a>
-                                        </li>
-                                        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
+                                        <a class="nav-link headerlink" href="/edit-profile">
+                                            Hello, <b><%= currentUser.dispName() %></b>
+                                        </a>
+                                        <a class="nav-link headerlink" href="/logout">Log out</a>
                                     <% } else { %>
-                                        <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="/signup">Sign up</a></li>
-                                        <% } %>
-                                </ul>
+                                        <a class="nav-link headerlink" href="/login">Log in</a>
+                                        <a class="nav-link headerlink" href="/signup">Sign up</a>
+                                    <% } %>
+                                </nav>
+                                
                             
-                </div>
-            </div>
+              
+            </nav>
 
 
 
