--- a/views/style.css
+++ b/views/style.css
@@ -6,6 +6,8 @@ h1 {
   font-weight: 100;
   font-size: 50pt;
   color: #7BBB54;
+  padding-top: 5%;
+  padding-bottom: 2%;
 }
 
 h2 {
@@ -27,9 +29,10 @@ body {
   background-size: 40%, 7.5%;
 }
 
-.navbox {
+.navbox, .navbar {
   background-color: #7BBB54;
-  margin-top: 50px;
+  margin-top: 3%;
+  padding-left: 2%;
 }
 
 a {
@@ -44,6 +47,10 @@ a:visited {
   color: rgb(132, 73, 158);
 }
 */
+
+.row {
+  padding-bottom: 5%;
+}
 
 .nav > li > a {
   font-family: 'Dosis', sans-serif;
@@ -67,16 +74,48 @@ a:active {
 }
 
 
-.btn-primary {
+.btn-primary, a.nav-link {
   color: #fff;
   background-color: #7BBB54;
   border-color: #ffffff;
 }
 
-.btn-primary:hover {
+.menu {
+  border: 1px white solid;
+}
+
+.btn-primary:hover, a.nav-link:hover {
   color: #fff;
   background-color: #91cf6b;
   border-color: #ffffff;
+}
+
+a.nav-link.headerlink {
+  color: rgb(223, 223, 223);
+  background-color: #7BBB54;
+}
+
+a.nav-link.headerlink:hover {
+  color: rgb(255, 255, 255);
+  background-color: #7BBB54;
+}
+
+.card {
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.profile, .login {
+  border: rgb(122, 122, 122) 1px solid;
+}
+
+td {
+  padding-bottom: 2%;
+}
+
+.form-control:focus {
+  border-color: #7BBB54;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(43, 122, 6, 0.6);
 }
 
 /* Set the size of the div element that contains the map */
