--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,13 @@
         
         <h2>Hop into the queue that suits you best. If your plans change,
             simply hop out, or hop back a few positions.</h2>
+        <table width="100%">
+            <tr>
+                <td align="right">
+                    <a class="btn btn-primary btn-lg" href="/signup">Sign Up</a>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
 
@@ -35,7 +42,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td colspan="2" align="right">
                         <input type="submit" value="Log in" class="btn btn-primary">
                     </td>
                 </tr>            
