--- a/views/style.css
+++ b/views/style.css
@@ -118,6 +118,15 @@ td {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(43, 122, 6, 0.6);
 }
 
+.reqfield:before {
+  content:"* ";
+  color: red;
+}
+
+textarea.feedback {
+  width: 100%;
+}
+
 /* Set the size of the div element that contains the map */
 #map {
   height: 400px;
