--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -70,7 +70,7 @@
                                     <%=currentUser.address.state%>
                                 <% } %>
 
-                                <% if (typeof currentUser.address.postcode === 'undefined') { %>
+                                <% if (currentUser.address.postcode === null) { %>
                                     [postcode]
                                 <% } else if (currentUser.address.postcode === "") { %> 
                                     [postcode]
@@ -82,9 +82,9 @@
                         <tr>
                             <td>
                                 <% if (typeof currentUser.mobile === 'undefined') { %>
-                                    [mobile]
+                                    M: [mobile]
                                 <% } else if (currentUser.mobile === "") { %> 
-                                    [mobile]
+                                    M: [mobile]
                                 <% } else { %> 
                                     M: <%=currentUser.mobile%>
                                 <% } %>
@@ -93,9 +93,9 @@
                         <tr>
                             <td>
                                 <% if (typeof currentUser.email === 'undefined') { %>
-                                    [email]
+                                    E: [email]
                                 <% } else if (currentUser.email === "") { %> 
-                                    [email]
+                                    E: [email]
                                 <% } else { %> 
                                     E: <%=currentUser.email%>
                                 <% } %>
@@ -112,6 +112,7 @@
     <div class="col-sm-3">
         <nav class="nav flex-column">
             <a class="nav-link menu" href="/edit-profile">Edit Profile</a>
+            <a class="nav-link menu" href="/delete-profile">Delete Profile</a>
             <a class="nav-link menu" href="#">Link</a>
             <a class="nav-link menu" href="#">Link</a>
             <a class="nav-link menu disabled" href="#">Disabled</a>
