Update estimate time functionality

--- a/views/booking-confirmation.ejs
+++ b/views/booking-confirmation.ejs
@@ -26,7 +26,7 @@
 </script>
 
 <h1>Booking Confirmation</h1>
-<h2>You are all set to see a doctor, <%= currentUser.name() %>.</h2>
+<h2>You are all set to see a doctor, <%= currentUser.dispName() %>.</h2>
 <br>
 
 
