test chat functionality working to send private messages

--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -113,6 +113,7 @@
         <nav class="nav flex-column">
             <a class="nav-link menu" href="/edit-profile">Edit Profile</a>
             <a class="nav-link menu" href="/delete-profile">Delete Profile</a>
+            <a class="nav-link menu" href="/chat">Chat feature test</a>
             <a class="nav-link menu" href="#">Link</a>
             <a class="nav-link menu" href="#">Link</a>
             <a class="nav-link menu disabled" href="#">Disabled</a>
