--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,7 +7,10 @@
         
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    </head>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIdrsF-nr-pEoh4T4V1E56WilzwOyD0Js&callback=initMap&libraries=&v=weekly" async></script>
+
+    </head> 
+    <!-- AIzaSyCFWLMNFY6YuUNRWphBPMkfXJodkz_oMAA -->
 
     <body>
         
